# wafrift

./: .dockerignore  .gitignore  .wafrift.toml.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LEGENDARY_TESTING_PLAN.md  README.md  ROBUSTNESS_AUDIT.md  SECURITY.md  SECURITY_FINDINGS.md  TODO.md  WAFMODEL_PARADIGM_PLAN.md  WIRING_AUDIT.md  _build290.sh  demo.tape  mutants.toml  scratch.rs  todos.md  wafrift-feedback-paddle-bypass.md
crates/captchaforge-bridge/: Cargo.toml  README.md
crates/captchaforge-bridge/src/: lib.rs
crates/captchaforge-bridge/tests/: chromium_missing.rs  global_config_oncecell.rs  store_roundtrip.rs  timeout_honoured.rs
crates/cli/: Cargo.toml  README.md
crates/cli/bench_payloads/: default.json
crates/cli/rules/: policing_probes.toml
crates/cli/src/: attack_cmd.rs  bank.rs  bank_registry.rs  bench_diff.rs  bench_waf.rs  bench_waf_tests.rs  body_diff_cmd.rs  bypass_probe.rs  cache_diff_cmd.rs  callback_token.rs  client_deliver_cmd.rs  cluster_cmd.rs  compress_cmd.rs  config.rs  corpus_cmd.rs  corpus_recorder.rs  cors_diff_cmd.rs  detect_cmd.rs  diff_cmd.rs  discover_cmd.rs  distill_cmd.rs  egress_args.rs  egress_example.rs  equiv_engine.rs  evade_cmd.rs  exec_proof.rs  explain.rs  exploit_cmd.rs  gql_diff_cmd.rs  h2_diff_cmd.rs  harvest_cmd.rs  header_diff_cmd.rs  helpers.rs  http3_frames_cmd.rs  hunt_cmd.rs  import_curl.rs  info_gain_sched.rs  init_cmd.rs  interactive.rs  ja3_diff_cmd.rs  (+44 more)
crates/cli/tests/: attack_e2e.rs  auth_bypass_count_docs_in_sync.rs  bank_e2e.rs  bench_corpus_integrity.rs  bench_corpus_stress.rs  bench_diff_e2e.rs  body_diff_e2e.rs  bypass_probe_e2e.rs  cache_diff_e2e.rs  cf_real_mock_smoke.rs  client_deliver_e2e.rs  cluster_e2e.rs  compress_e2e.rs  corpus_e2e.rs  cors_diff_e2e.rs  detect_e2e.rs  distill_e2e.rs  dogfood_fixes_e2e.rs  dogfood_session.rs  e2e_cli.rs  e2e_wafmodel.rs  evade_e2e.rs  exit_code_contract_e2e.rs  exploit_split_param_e2e.rs  fingerprint_live_e2e.rs  gql_diff_e2e.rs  graphql_scan.rs  h2_diff_e2e.rs  header_diff_e2e.rs  import_curl_proptest.proptest-regressions  import_curl_proptest.rs  info_gain_sched_e2e.rs  init_e2e.rs  jwt_diff_e2e.rs  listener_e2e.rs  man_e2e.rs  manpage_in_sync.rs  method_diff_e2e.rs  mock_waf_e2e.rs  model_evade_e2e.rs  (+27 more)
crates/content-type/: Cargo.toml  LICENSE-APACHE  README.md
crates/content-type/src/: content_type.rs  content_type_tests.rs  json_smuggle.rs  lib.rs  multipart_enhanced.rs  multipart_smuggle.rs
crates/content-type/tests/: boundary_unique_audit.rs  formats.rs  formats_roundtrip_proptest.rs  panic_safety_audit.proptest-regressions  panic_safety_audit.rs  xml_safe_name_unicode_audit.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs  probe_aggregator.rs
crates/core/tests/: adversarial.rs  encoding_adversarial.rs  encoding_depth.rs  failure_tests.rs  pipeline_integration.rs  strategy_adversarial.rs
crates/detect/: Cargo.toml  README.md  build.rs
crates/detect/benches/: detect_throughput.rs
crates/detect/examples/: detect_basic.rs
crates/detect/src/: explain.rs  lib.rs  response_fingerprint.rs
crates/detect/tests/: active_probe_classify.rs  attribution_present.rs  e2e_mock_waf.rs  explain.rs  rule_completeness.rs  vendored_rules_in_sync.rs
crates/encoding/: Cargo.toml  README.md
crates/encoding/benches/: encoding_hot_paths.rs
crates/encoding/examples/: encoding_basic.rs  layered.rs
crates/encoding/src/: auth_bypass.rs  auth_header_smuggle.rs  compression.rs  contextual.rs  cookie_smuggle.rs  error.rs  header.rs  header_tests.rs  host_header_smuggle.rs  jwt_smuggle.rs  lib.rs  path_normalize_smuggle.rs  path_prefix.rs  payload_catalog.rs  range_header_smuggle.rs  url_mutate.rs
crates/encoding/tests/: adversarial.rs  adversarial_contextual.rs  auth_bypass_deep.rs  auth_bypass_probe_count_documented.rs  contextual.rs  contextual_audit_extras.rs  determinism.rs  exhaustive_encoder_spec.rs  header_crlf_audit.rs  json_unicode_alnum_deep.rs  mutator_determinism.rs  mutator_idempotence.proptest-regressions  mutator_idempotence.rs  mutator_panic_audit.rs  non_canonical_spaces_audit.rs  property.rs  property_suite.rs  smuggle_probe_integration.rs  sql_adjacent_string_concat_deep.rs  tamper_composition_deep.rs  tamper_proptest.proptest-regressions  tamper_proptest.rs  tamper_universal_invariants.rs  url_mutate_audit_fixes.rs  url_mutate_signature_evasion.rs  validate_in_context_audit.rs
crates/evolution/: Cargo.toml  README.md  build.rs
crates/evolution/src/: advisor.rs  ast_mcts.rs  body_padding.rs  coverage_feedback.rs  custom_rules.rs  dilution.rs  edge_pop_coverage.rs  encoding_lattice.rs  h1_dedup.rs  hunt_corpus_bridge.rs  intelligence.rs  lib.rs  lineage.rs  min_bypass_set.rs  rule_alphabet.rs  rule_corpus.rs  safe_io.rs  types.rs
crates/evolution/tests/: ast_mcts_wiring.rs  body_padding_unicode_audit.rs  booster_wiring.rs  budget_repay_audit.rs  checkpoint_roundtrip.rs  coverage_wiring.rs  diversity_score.rs  engine_clone.rs  engine_panic_audit.rs  ensemble_dilution_wiring.rs  id_remapping.rs  rule_corpus_proptest.rs  stagnation_termination.rs
crates/fingerprint/: Cargo.toml  README.md
crates/fingerprint/src/: lib.rs  (+4 more)
crates/genome-registry/: Cargo.toml  README.md
crates/grammar/: Cargo.toml  README.md  build.rs
crates/graphql/: Cargo.toml  README.md  deny.toml
crates/grpc-evasion/: Cargo.toml  README.md
crates/http3-evasion/: Cargo.toml  README.md
crates/liveoracle/: Cargo.toml  README.md
crates/oracle/: Cargo.toml  README.md  build.rs
crates/plugin-api/: Cargo.toml  LICENSE-MIT  README.md
crates/pool/: Cargo.toml  README.md
crates/proxy/: Cargo.toml  README.md
crates/recon/: Cargo.toml  LICENSE-MIT  README.md
crates/sanitizer/: Cargo.toml  README.md
crates/smuggling/: Cargo.toml  README.md
crates/strategy/: Cargo.toml  README.md
crates/tcpoverlap/: Cargo.toml  README.md
crates/telemetry/: Cargo.toml
crates/transport/: Cargo.toml  README.md
crates/types/: Cargo.toml  README.md
crates/wafmodel/: Cargo.toml  LICENSE-APACHE  README.md  mutants.toml
(+1137 files in other folders)
