[workspace]
resolver = "2"
members = [
    # ── Foundation ──
    "crates/types",
    # ── Evasion technique crates ──
    "crates/encoding",
    "crates/grammar",
    "crates/content-type",
    "crates/smuggling",
    "crates/fingerprint",
    # ── Intelligence crates ──
    "crates/detect",
    "crates/evolution",
    # ── Pipeline ──
    "crates/strategy",
    # ── Existing outer crates ──
    "crates/core",
    "crates/cli",
    "crates/proxy",  # May require external dependencies
    "crates/transport", "crates/oracle", "crates/pool",
    "crates/recon",
    "crates/genome-registry",
    "crates/captchaforge-bridge",
]

[workspace.package]
version = "0.2.9"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/santhsecurity/wafrift"
description = "Intelligent WAF evasion engine — Content-Type switching, parsing discrepancy exploitation, TLS fingerprint rotation"
keywords = ["waf", "evasion", "security", "bypass", "firewall"]
categories = ["network-programming", "web-programming"]
authors = ["Santh Project <contact@santh.dev>"]

[workspace.metadata.santh]
status = "beta"

# Centralised lint policy. Each crate opts in with `[lints] workspace = true`
# in its Cargo.toml. Kept conservative on purpose — turning on `clippy::pedantic`
# across 16 crates buries real warnings in noise. CI already runs
# `cargo clippy --workspace --all-features --all-targets -- -D warnings`.
[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[workspace.dependencies]
# Internal crates — `version` required for crates.io (`cargo publish`)
wafrift-types = { path = "crates/types", version = "0.2.9" }
wafrift-encoding = { path = "crates/encoding", version = "0.2.9" }
wafrift-grammar = { path = "crates/grammar", version = "0.2.9" }
wafrift-content-type = { path = "crates/content-type", version = "0.2.9" }
wafrift-smuggling = { path = "crates/smuggling", version = "0.2.9" }
wafrift-fingerprint = { path = "crates/fingerprint", version = "0.2.9" }
wafrift-detect = { path = "crates/detect", version = "0.2.9" }
wafrift-evolution = { path = "crates/evolution", version = "0.2.9" }
wafrift-strategy = { path = "crates/strategy", version = "0.2.9" }
wafrift-oracle = { path = "crates/oracle", version = "0.2.9" }
wafrift-transport = { path = "crates/transport", version = "0.2.9" }
wafrift-pool = { path = "crates/pool", version = "0.2.9" }
wafrift-recon = { path = "crates/recon", version = "0.2.9" }
wafrift-captchaforge-bridge = { path = "crates/captchaforge-bridge", version = "0.2.9" }
wafrift-genome-registry = { path = "crates/genome-registry", version = "0.2.9" }
mctrust = "=0.4.0"
# External dependencies (unavailable in this environment)
# attackstr = { path = "../../libs/offensive/attackstr" }
# scanclient = { path = "../../libs/scanner/scanclient" }
# secfinding = { path = "../../libs/scanner/secfinding" }
# Core
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli", "stream", "json"] }
# Browser-impersonating HTTP client for the optional `tls-impersonate`
# feature. Closes the JA3 / h2 SETTINGS gap vs EvilWAF — Chrome /
# Firefox / Safari / Edge ClientHello bytes-for-bytes via BoringSSL.
# Default builds do NOT pull this in (no boring-sys); only consumers
# that enable `tls-impersonate` pay the dep cost.
#
# rquest 5.x split the impersonation profiles into a companion crate
# (`rquest-util`) and renamed the API: `Impersonate::Chrome131` became
# `rquest_util::Emulation::Chrome131`, and `ClientBuilder::impersonate(imp)`
# became `ClientBuilder::emulation(emu)`. We pin both crates here.
#
# All rquest 4.x and earlier are yanked from crates.io, so 5.x is the
# only path forward.
rquest = { version = "5", default-features = false, features = ["cookies", "gzip", "brotli", "json", "charset", "stream"] }
# Browser-emulation profile companion to rquest 5.x.
rquest-util = { version = "2", default-features = false, features = ["emulation"] }
http = "1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

# Crypto / TLS
rustls = "0.23"
tokio-rustls = "0.26"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
urlencoding = "2"
regex = "1"
toml = "0.8"
ratatui = "0.30"
crossterm = "0.28"
# Best-effort clipboard for the proxy TUI's curl-yank action.
# Default features off so we don't pull X11/wayland deps when the
# binary is built on a server with no display — the yank action falls
# back to writing /tmp/wafrift-yank-N.curl.
arboard = { version = "3", default-features = false }
dirs = "6"
proptest = "1.11.0"
base64 = "0.22.1"
hex = "0.4.3"
colored = "2"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
# rcgen takes time::OffsetDateTime for not_before/not_after; expose
# the same major-version transitive so we can set bounded validity.
time = { version = "0.3", default-features = false, features = ["std"] }
sqlparser = "0.61.0"
wiremock = "0.6.5"
async-trait = "0.1.89"
futures-util = "0.3.32"
moka = { version = "0.12.15", features = ["future"] }
rustls-pki-types = "1.14.0"

webpki-roots = "1.0.6"
fs4 = "1.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
