[workspace]
resolver = "2"
members = [
    # ── Foundation ── shared types, bogon classifier, technique
    # enum, verdict shapes. Every other crate depends on this.
    "crates/types",

    # ── Wire-level mutators ── byte / token / frame transforms.
    "crates/encoding",          # encoders + 21 attack-payload libs
    "crates/grammar",           # per-class payload grammars
    "crates/content-type",      # multipart / charset / json variants
    "crates/smuggling",         # CL.TE / TE.CL / H2 / Kettle / WS
    "crates/tcpoverlap",        # target-based TCP sequence-overlap desync
    "crates/fingerprint",       # TLS JA3/JA4, H2 SETTINGS
    "crates/http3-evasion",     # QPACK desync, conn migration, 0-RTT
    "crates/grpc-evasion",      # protobuf opaque-payload framing
    "crates/graphql",           # introspection + alias-bomb + op-mismatch

    # ── Intelligence ── learn the WAF / evolve / score / model.
    "crates/detect",            # WAF fingerprint via headers + DNS
    "crates/evolution",         # MAP-Elites, ast_mcts, coverage-feedback
    "crates/wafmodel",          # L*, SFA, mine, solve, mlwaf, booster
    "crates/sanitizer",         # client-sanitizer decompiler (sourcemap→extract→L* mine)
    "crates/liveoracle",        # calibrated live WAF-response oracle (split from CLI)

    # ── Pipeline ── orchestrate the techniques.
    "crates/strategy",          # host_state, MCTS bridge, drift_window
    "crates/oracle",            # per-payload-class semantic oracles

    # ── Runtime ── send the bytes, observe the responses.
    "crates/transport",         # client + tls-impersonate + egress pool
    "crates/proxy",             # MITM forward proxy + intercept
    "crates/captchaforge-bridge", # optional captcha-solver bridge

    # ── Frontend ── operator surface.
    "crates/cli",               # 40+ subcommands
    "crates/core",              # facade re-exports
    "crates/recon",             # crt.sh + DNS origin discovery
    "crates/genome-registry",   # community bypass exchange
    "crates/plugin-api",        # external TOML + WASM tampers
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/santhsecurity/wafrift"
description = "Programmable WAF-evasion engine — encoding × grammar mutation × HTTP smuggling × Content-Type confusion × TLS fingerprint rotation × active-learning WAF decompilation"
keywords = ["waf", "evasion", "security", "bypass", "firewall"]
categories = ["network-programming", "web-programming"]
authors = ["Santh Project <security@santh.dev>"]

[workspace.metadata.santh]
status = "beta"

# Centralised lint policy. Each crate opts in with `[lints] workspace = true`
# in its Cargo.toml. Kept conservative on purpose — turning on `clippy::pedantic`
# across 16 crates buries real warnings in noise. CI already runs
# `cargo clippy --workspace --all-features --all-targets -- -D warnings`.
[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

# Clippy lints the workspace explicitly opts out of. Each entry has
# a reason — drift the policy by editing this block, not by sprinkling
# `#[allow]` attributes across the codebase.
[workspace.lints.clippy]
# Orchestrator functions (scan::run_scan + raw_runner + a few CLI
# entry points) thread 8-14 argument values through their phase
# pipelines because each is an operator-provided CLI knob.
# Refactoring into a single Args struct costs more documentation
# than it saves; the wide signatures are pinned to the CLI flag
# surface deliberately.
too_many_arguments = "allow"
# Build-time regression gates (e.g. `MAX_TUNNEL_BYTES_PER_DIRECTION
# < u64::MAX/1000`, `DELIVERY_ARMS >= 7`) intentionally assert on
# constants; clippy's `assertions_on_constants` would erase the gate.
assertions_on_constants = "allow"
# Doc comments use `///   - sub-bullet` (3-space indent) in several
# places; the lint wants 2-space which conflicts with rustfmt's
# wrap behaviour. We already enforce rustfmt — let it win.
doc_lazy_continuation = "allow"

[workspace.dependencies]
# Internal crates — `version` required for crates.io (`cargo publish`)
wafrift-types = { path = "crates/types", version = "0.3.0" }
wafrift-encoding = { path = "crates/encoding", version = "0.3.0" }
wafrift-grammar = { path = "crates/grammar", version = "0.3.0" }
wafrift-content-type = { path = "crates/content-type", version = "0.3.0" }
wafrift-smuggling = { path = "crates/smuggling", version = "0.3.0" }
wafrift-tcpoverlap = { path = "crates/tcpoverlap", version = "0.3.0" }
wafrift-fingerprint = { path = "crates/fingerprint", version = "0.3.0" }
wafrift-detect = { path = "crates/detect", version = "0.3.0" }
wafrift-evolution = { path = "crates/evolution", version = "0.3.0" }
wafrift-wafmodel = { path = "crates/wafmodel", version = "0.3.0" }
wafrift-sanitizer = { path = "crates/sanitizer", version = "0.3.0" }
wafrift-liveoracle = { path = "crates/liveoracle", version = "0.3.0" }
wafrift-strategy = { path = "crates/strategy", version = "0.3.0" }
wafrift-oracle = { path = "crates/oracle", version = "0.3.0" }
wafrift-transport = { path = "crates/transport", version = "0.3.0" }
proxywire = { path = "../../libs/runtime/proxywire" }
wafrift-recon = { path = "crates/recon", version = "0.3.0" }
wafrift-captchaforge-bridge = { path = "crates/captchaforge-bridge", version = "0.3.0" }
wafrift-genome-registry = { path = "crates/genome-registry", version = "0.3.0" }
wafrift-graphql = { path = "crates/graphql", version = "0.3.0" }
wafrift-http3-evasion = { path = "crates/http3-evasion", version = "0.3.0" }
wafrift-grpc-evasion = { path = "crates/grpc-evasion", version = "0.3.0" }
wafrift-plugin-api = { path = "crates/plugin-api", version = "0.3.0" }
guise = { path = "../../libs/runtime/guise", default-features = false, features = ["fingerprint", "http", "rotation"] }
guise-pacing = { path = "../../libs/runtime/guise-pacing" }
scanclient = { path = "../../libs/scanner/scanclient", default-features = false }
mctrust = "=0.4.0"
pocgen = { path = "../../libs/offensive/pocgen" }
# Canonical SSRF bogon/CIDR classifier shared with gossan + keyhog. wafrift
# delegates `wafrift_types::ip_addr_is_bogon` to it so one fix (e.g. the NAT64
# 64:ff9b::/96 IMDS bypass) lands for every tool — see crates/types/src/bogon.rs.
bogon = { path = "../../libs/scanner/bogon", version = "0.1.0" }
boundedio = { path = "../../libs/general/boundedio" }
# Canonical crt.sh / CT-log client. wafrift-recon's bounded, timeout-guarded
# crt.sh reader was the donor for this crate; recon now consumes it (with the
# `fetch` layer) so the one hardened reader is shared, not re-derived.
ctlog = { path = "../../libs/scanner/ctlog", features = ["fetch"] }

# Core
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli", "stream", "json", "http2"] }
# Browser-impersonating HTTP client for the optional `tls-impersonate`
# feature. Closes the JA3 / h2 SETTINGS gap vs EvilWAF — Chrome /
# Firefox / Safari / Edge ClientHello bytes-for-bytes via BoringSSL.
# Default builds do NOT pull this in (no boring-sys); only consumers
# that enable `tls-impersonate` pay the dep cost.
#
# rquest 5.x split the impersonation profiles into a companion crate
# (`rquest-util`) and renamed the API: `Impersonate::Chrome131` became
# `rquest_util::Emulation::Chrome131`, and `ClientBuilder::impersonate(imp)`
# became `ClientBuilder::emulation(emu)`. We pin both crates here.
#
# All rquest 4.x and earlier are yanked from crates.io, so 5.x is the
# only path forward.
rquest = { version = "5", default-features = false, features = ["cookies", "gzip", "brotli", "json", "charset", "stream"] }
# Browser-emulation profile companion to rquest 5.x.
rquest-util = { version = "2", default-features = false, features = ["emulation"] }
http = "1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"

# Crypto / TLS
rustls = "0.23"
tokio-rustls = "0.26"

# DNS resolver for CNAME-chain fingerprinting (detect crate).
# WAF/CDN providers leak their identity in DNS CNAME chains even when
# the origin strips every HTTP header — `www.ebay.com → akamaiedge.net`
# is the canonical example. Resolution happens once per `wafrift detect`
# probe, in parallel with the HTTP fetch, so the latency cost is hidden.
hickory-resolver = { version = "0.25.2", default-features = false, features = ["tokio", "system-config"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
rand = "0.8"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
urlencoding = "2"
url = "2"
regex = "1"
toml = "0.8"
ratatui = "0.30"
crossterm = "0.28"
# Best-effort clipboard for the proxy TUI's curl-yank action.
# Default features off so we don't pull X11/wayland deps when the
# binary is built on a server with no display — the yank action falls
# back to writing /tmp/wafrift-yank-N.curl.
arboard = { version = "3", default-features = false }
dirs = "6"
proptest = "1.11.0"
base64 = "0.22.1"
# Crypto primitives for interactsh-compatible OOB callback server.
# Versions match the interactsh client crate for wire compatibility.
rsa = { version = "0.9", features = ["pem"] }
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
hex = "0.4.3"
colored = "2"
rcgen = { version = "0.14.7", features = ["pem", "x509-parser"] }
# rcgen takes time::OffsetDateTime for not_before/not_after; expose
# the same major-version transitive so we can set bounded validity.
time = { version = "0.3", default-features = false, features = ["std"] }
sqlparser = "0.61.0"
wiremock = "0.6.5"
async-trait = "0.1.89"
futures-util = "0.3.32"
moka = { version = "0.12.15", features = ["future"] }
rustls-pki-types = "1.14.0"

webpki-roots = "1.0.6"
fs4 = "1.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
# WASM sandbox engine for plugin-api external tampers.
wasmtime = { version = "30", default-features = false, features = ["runtime", "cranelift"] }
tempfile = "3"
lru = "0.18"
