[package]
name = "wafrift-captchaforge-bridge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Glue crate that connects wafrift's managed-challenge flow to the captchaforge headless-browser solver."
readme = "README.md"
keywords = ["wafrift", "captcha", "captchaforge", "cloudflare", "challenge"]
categories = ["network-programming", "web-programming"]

[dependencies]
wafrift-transport = { workspace = true }
captchaforge = { version = "0.2", features = ["vision"] }
# Firefox + BiDi driving via rustenium. Replaces the old
# `runtime_headless` + `chromiumoxide` CDP stack.
runtime-foxdriver = { version = "0.1.0" }
guise = { workspace = true, features = ["browser"] }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { version = "0.3" }
serde_json = { workspace = true }
which = { version = "7" }

[lints]
workspace = true

[dev-dependencies]
temp-env = { version = "0.3.6", features = ["async_closure"] }
