[package]
name = "wafrift-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WAF evasion toolkit CLI"
readme = "README.md"
repository.workspace = true
keywords = ["waf", "cli", "evasion", "security", "scanner"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "wafrift"
path = "src/main.rs"

[dependencies]
wafrift-encoding = { workspace = true }
wafrift-grammar = { workspace = true }
wafrift-detect = { workspace = true }
wafrift-evolution = { workspace = true }
wafrift-fingerprint = { workspace = true }
wafrift-recon = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
colored = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
urlencoding = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
wafrift-strategy = { workspace = true }
wafrift-transport = { workspace = true }
wafrift-oracle = { workspace = true }
wafrift-genome-registry = { workspace = true }
wafrift-types = { workspace = true }
wafrift-smuggling = { workspace = true, features = ["unsafe-probes"] }
wafrift-content-type = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# SIGPIPE handler reset on Unix so `wafrift ... | head` exits silently
# instead of panicking.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = { workspace = true }

[features]
# proxy-pool (HTTP/SOCKS proxy rotation via wafrift-pool) is on by default
# now that the CLI ships full transport features. origin-bypass and
# gossan-integration remain opt-in because they pull in larger deps.
default = ["proxy-pool"]
gossan-integration = ["origin-bypass"]
origin-bypass = ["wafrift-transport/origin-bypass"]
proxy-pool = ["wafrift-transport/proxy-pool"]

[lints]
workspace = true
