[package]
name = "wafrift-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "wafrift CLI — scan, detect, parser-diff, smuggle, model-evade, bench-waf, bypass-probe and 35+ subcommands for WAF evasion and analysis"
readme = "README.md"
repository.workspace = true
keywords = ["waf", "cli", "evasion", "security", "scanner"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "wafrift"
path = "src/main.rs"

[dependencies]
wafrift-encoding = { workspace = true }
wafrift-grammar = { workspace = true }
wafrift-detect = { workspace = true }
wafrift-evolution = { workspace = true }
wafrift-recon = { workspace = true }
wafrift-wafmodel = { workspace = true }
wafrift-sanitizer = { workspace = true }
wafrift-tcpoverlap = { workspace = true }
wafrift-liveoracle = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
colored = { workspace = true }
reqwest = { workspace = true }
guise = { workspace = true }
guise-pacing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
toml = { workspace = true }
regex = { workspace = true }
urlencoding = { workspace = true }
hex = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
dirs = { workspace = true }
wafrift-strategy = { workspace = true }
wafrift-transport = { workspace = true }
wafrift-oracle = { workspace = true }
wafrift-genome-registry = { workspace = true }
wafrift-graphql = { workspace = true }
wafrift-types = { workspace = true }
pocgen = { workspace = true }
wafrift-smuggling = { workspace = true, features = ["unsafe-probes"] }
wafrift-content-type = { workspace = true }
scanclient = { workspace = true }
# Pulled in for `wafrift smuggle-emit` (probe_aggregator) — also gives
# the CLI the SmuggleProbe trait surface without duplicating the
# aggregator across crates.
wafrift-core = { path = "../core", version = "0.3.1" }
# HTTP/3 + QUIC evasion data-plane primitives (QPACK desync, 0-RTT
# replay, CID rotation, stream priority topology, MTU fragmentation).
# Pulled in so `techniques list` enumerates the HTTP/3 surface and
# the bench corpus can reference its EvasionTechnique variants.
wafrift-http3-evasion = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
# Crypto primitives for interactsh-compatible OOB callback server.
rsa = { workspace = true }
aes = { workspace = true }
ctr = { workspace = true }
sha2 = { workspace = true }
# DEFLATE (zlib framing) for the `zb64` app-transform: base64(zlib(payload)),
# the URL-state-compression idiom (pako/lz-string) a signature WAF can't inflate.
# Already in the workspace lock (was a dev-dep for safe_body's gzip-bomb test).
flate2 = "1"
# Structured tracing — RUST_LOG=wafrift=debug wires through to every
# subcommand. Already in the workspace lock via transitive deps; listed
# explicitly so `use tracing::*` compiles in crate code without
# relying on re-export luck from an upstream dep.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Raw TLS socket I/O for trailer-diff (reqwest can't emit chunked trailers).
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

# Santh-owned differential response analysis primitive.
# Backs `parser_diff_common::{body_delta_pct, severity_of, status_class}`
# via thin local wrappers — every parser-diff subcommand
# (parser-/header-/body-/query-/cache-/h2-/method-/gql-/jwt-/cors-
# /trailer-diff) ends up grading divergence through the same upstream
# `respdiff::classify_severity`, so a fix to the classification logic
# reaches every subcommand in one edit AND propagates across the rest
# of Santh's scanner family.
# v0.3.0 added DiffSeverity + classify_severity + body_size_delta_pct
# + saturating timing arithmetic + RFC 9110 §5.2 header folding.
# crates.io 0.3.0 (santhsecurity org).
respdiff = "=0.3.0"

# Santh-owned HTTP error classification + target-error modelling.
# Used for app-error / SQL-syntax / JSON-parse / missing-property insight
# downstream of a request — feeds the differential phase + insight loop.
#
# NOT a replacement for the three local WAF-block classifiers
# (`transport::is_waf_block`, `detect::is_blocked_response`,
# `calibration::analyze_calibration`): those three diverge by design
# because they answer different questions with opposite cost asymmetries
# (FN-cheap retry-loop vs. FN-expensive calibration). See each file's
# doc-comment for the audit.
# crates.io 0.2.1 (santhsecurity org).
erroracle = "0.2.1"

# SIGPIPE handler reset on Unix so `wafrift ... | head` exits silently
# instead of panicking.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = { workspace = true }
wiremock = { workspace = true }
reqwest = { workspace = true }
# Cross-binary localhost serialisation. Each *_e2e.rs file spawns
# a mock TCP listener AND invokes the `wafrift` binary as a
# subprocess; under default cargo-test parallelism (one test
# binary per file, running concurrently) Windows runs out of
# localhost ephemeral ports + slow TIME_WAIT reuse leaks
# spurious "connection refused" baseline failures. `serial_test`
# adds a file-scoped lock so the wafrift-binary-spawning tests
# run one-at-a-time across the workspace.
serial_test = "3"
tempfile = { workspace = true }

[features]
# proxy-pool (HTTP/SOCKS proxy rotation via proxywire) is on by default
# now that the CLI ships full transport features. origin-bypass and
# gossan-integration remain opt-in because they pull in larger deps.
default = ["proxy-pool"]
gossan-integration = ["origin-bypass"]
origin-bypass = ["wafrift-transport/origin-bypass"]
proxy-pool = ["wafrift-transport/proxy-pool"]
# `tls-impersonate` unlocks the `wafrift ja3-diff` subcommand (and any
# future stealth-client CLI surface). It pulls in wreq + BoringSSL,
# which adds ~30–60 s to first-time builds — gated explicitly so the
# default `cargo install wafrift` stays lean. Build with
# `cargo install wafrift --features tls-impersonate` to enable.
tls-impersonate = ["wafrift-transport/tls-impersonate"]

[lints]
workspace = true
