[package]
name = "wafrift-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WAF Rift -- integration-test facade (not a public API surface)."
readme = "README.md"
repository.workspace = true
keywords = ["waf", "evasion", "security", "http", "engine"]
categories = ["network-programming", "web-programming"]

[dependencies]
wafrift-types = { workspace = true }
wafrift-encoding = { workspace = true }
wafrift-grammar = { workspace = true }
wafrift-content-type = { workspace = true }
wafrift-smuggling = { workspace = true }
wafrift-fingerprint = { workspace = true }
wafrift-detect = { workspace = true }
wafrift-evolution = { workspace = true }
wafrift-strategy = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
