[package]
name = "wafrift-detect"
version.workspace = true
edition = "2024"
license.workspace = true
repository.workspace = true
description = "WAF detection from response headers and body, response fingerprint drift analysis."
readme = "README.md"
keywords = ["waf", "detection", "fingerprinting", "security", "http"]
categories = ["network-programming", "web-programming"]
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
wafrift-types = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
once_cell = "1"
tracing = { workspace = true }
aho-corasick = "1"
thiserror = { workspace = true }
# DNS-CNAME chain fingerprinting — see dns_fingerprint.rs.
# Optional behind `dns-cname` so the detect crate stays light for
# embedded / static-binary callers that don't want a tokio runtime
# pulled in just for the resolver.
hickory-resolver = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt", "macros"] }

[dev-dependencies]
proptest = { workspace = true }
wiremock = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "detect_throughput"
harness = false

[features]
default = ["dns-cname"]
# DNS-CNAME chain fingerprinting.  Pulls in `hickory-resolver` and a
# tokio runtime — opt out via `default-features = false` if you want
# header-only detection with zero async deps.
dns-cname = ["dep:hickory-resolver", "dep:tokio"]

[lints]
workspace = true

