[package]
name = "wafrift-encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Payload encoding strategies and header obfuscation for WAF evasion."
readme = "README.md"
keywords = ["waf", "encoding", "evasion", "security", "pentest"]
categories = ["encoding", "network-programming", "web-programming"]
repository.workspace = true

[dependencies]
wafrift-types = { path = "../types" }
urlencoding = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
flate2 = "1"
unicode-normalization = "0.1"
thiserror = { workspace = true }

[[example]]
name = "encoding_basic"
path = "examples/encoding_basic.rs"

[[example]]
name = "layered"
path = "examples/layered.rs"

[lints]
workspace = true
