[package]
name = "wafrift-encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Payload encoding strategies and header obfuscation for WAF evasion."
readme = "README.md"
keywords = ["waf", "encoding", "evasion", "security", "pentest"]
categories = ["encoding", "network-programming", "web-programming"]
repository.workspace = true

[dependencies]
wafrift-types = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
flate2 = "1"
# Brotli for the compression-confusion attack: many WAFs ship a
# gzip/deflate decompressor but NOT a brotli one, so a brotli-encoded
# request body reaches the origin (which IS brotli-capable since
# Chrome 49 / Firefox 44 / nginx 1.11 ship native support) without
# the WAF ever inspecting the decompressed bytes.
brotli = "8"
unicode-normalization = "0.1"
thiserror = { workspace = true }
tracing = { workspace = true }

[[example]]
name = "encoding_basic"
path = "examples/encoding_basic.rs"

[[example]]
name = "layered"
path = "examples/layered.rs"

[dev-dependencies]
proptest = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }
# Integration tests use the multipart smuggle probes alongside the
# encoding-crate probes to verify the workspace-wide SmuggleProbe
# trait works across families. Dev-only so production builds stay
# decoupled.
wafrift-content-type = { workspace = true }

[[bench]]
name = "encoding_hot_paths"
harness = false

[lints]
workspace = true
