[package]
name = "wafrift-evolution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Genetic algorithm engine, differential analysis, intelligence feedback loop, and WAF-aware advisor."
readme = "README.md"
repository.workspace = true
keywords = ["waf", "evolution", "security", "fuzzing", "evasion"]
categories = ["algorithms", "network-programming"]

[dependencies]
boundedio = { workspace = true }
wafrift-types = { workspace = true }
wafrift-encoding = { workspace = true }
wafrift-detect = { workspace = true }
wafrift-wafmodel = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
lru = "0.18"
sha2 = "0.10"
tokio = { workspace = true }
sqlparser = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
tokio-test = "0.4"
wiremock = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
